--- a/src/templates/Hello.html
+++ b/src/templates/Hello.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALUDO AL MUNDO</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
+    <h1>HOLA MUNDO TRAIDOR OLVIDADO DE DIOS</h1>
 </body>
 </html>
